cmake_minimum_required(VERSION 3.10)

SET(CMAKE_VERBOSE_MAKEFILE OFF)

# 设置项目名称
project(demo)

set(CMAKE_C_VISIBILITY_PRESET hidden)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)

ADD_COMPILE_OPTIONS(-Wall)
# 设置配电网编译标志
# 如果是计量，则删除该标志
# ADD_COMPILE_OPTIONS(-DPEIDIANWANG)

IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
include(CMake_windows.cmake)
ENDIF(CMAKE_SYSTEM_NAME MATCHES "Windows")

INCLUDE_DIRECTORIES (
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/export/${CMAKE_SYSTEM_NAME})

# 动态、静态库输出目录
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/export/${CMAKE_SYSTEM_NAME})

SET(BUILD_SO_DLL_NAME ${PROJECT_NAME})
SET(BUILD_EXE_NAME Test_${PROJECT_NAME})

ADD_SUBDIRECTORY(bio)
# ADD_SUBDIRECTORY(test)