CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(cpp_primer_plus)

SET(CMAKE_CXX_FLAGS -std=c++11)

INCLUDE_DIRECTORIES (
    ./include 
)

SET(CMAKE_VERBOSE_MAKEFILE OFF)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
MESSAGE(STATUS " [EXEC_PATH] = " ${CMAKE_CURRENT_SOURCE_DIR}/bin)

SET(TARGET main)
ADD_SUBDIRECTORY(src)

